update docs & swagger
